{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 38,
  "lineage": "94663da0-65e1-14f6-155d-1855a3f50d8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGWItmVSCodeLab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:internet-gateway/igw-0473c39ab0b0a76ca",
            "id": "igw-0473c39ab0b0a76ca",
            "owner_id": "407505203657",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW-ItmVSCodeLab1"
            },
            "tags_all": {
              "Name": "IGW-ItmVSCodeLab1"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACLItmVSCodeLab1_Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:network-acl/acl-0fb8349f7123b8dca",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "192.168.8.0/25",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb8349f7123b8dca",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "192.168.8.96/27",
                "from_port": 5432,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "192.168.8.96/27",
                "from_port": 5432,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 5432
              }
            ],
            "owner_id": "407505203657",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0838b588a59c2ea90",
              "subnet-0b3e490d386c195bf"
            ],
            "tags": {
              "Name": "NACL-ItmVSCodeLab1_Backend"
            },
            "tags_all": {
              "Name": "NACL-ItmVSCodeLab1_Backend"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.SUNNET_ItmVSCodeLab1_Backend_DB_1",
            "aws_subnet.SUNNET_ItmVSCodeLab1_Backend_DB_2",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACLItmVSCodeLab1_Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:network-acl/acl-0f3d63f769770ca27",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.8.0/25",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f3d63f769770ca27",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "192.168.8.0/25",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "407505203657",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-079778c088a5c8692",
              "subnet-0b10162e40444ee66"
            ],
            "tags": {
              "Name": "NACL-ItmVSCodeLab1_Frontend"
            },
            "tags_all": {
              "Name": "NACL-ItmVSCodeLab1_Frontend"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.SUNNET_ItmVSCodeLab_Frontend_Web_1",
            "aws_subnet.SUNNET_ItmVSCodeLab_Frontend_Web_2",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTItmVSCodeLab1_Backend_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:route-table/rtb-0d89e0f8c3bfbf5eb",
            "id": "rtb-0d89e0f8c3bfbf5eb",
            "owner_id": "407505203657",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0473c39ab0b0a76ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-ItmVSCodeLab_Backend_DB_1"
            },
            "tags_all": {
              "Name": "RT-ItmVSCodeLab_Backend_DB_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "rtb-0d89e0f8c3bfbf5eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.IGWItmVSCodeLab1",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTItmVSCodeLab1_Frontend_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:route-table/rtb-00991587dc0dc404d",
            "id": "rtb-00991587dc0dc404d",
            "owner_id": "407505203657",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0473c39ab0b0a76ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-ItmVSCodeLab1_Frontend_1"
            },
            "tags_all": {
              "Name": "RT-ItmVSCodeLab1_Frontend_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "rtb-00991587dc0dc404d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.IGWItmVSCodeLab1",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAItmVSCodeLab1_Backend_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de93b266b5436a49",
            "region": "us-east-1",
            "route_table_id": "rtb-0d89e0f8c3bfbf5eb",
            "subnet_id": "subnet-0838b588a59c2ea90"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGWItmVSCodeLab1",
            "aws_route_table.RTItmVSCodeLab1_Backend_DB_1",
            "aws_subnet.SUNNET_ItmVSCodeLab1_Backend_DB_1",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAItmVSCodeLab1_Frontend_Web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b48db1893459233",
            "region": "us-east-1",
            "route_table_id": "rtb-00991587dc0dc404d",
            "subnet_id": "subnet-079778c088a5c8692"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGWItmVSCodeLab1",
            "aws_route_table.RTItmVSCodeLab1_Frontend_1",
            "aws_subnet.SUNNET_ItmVSCodeLab_Frontend_Web_1",
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUNNET_ItmVSCodeLab1_Backend_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:subnet/subnet-0838b588a59c2ea90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.8.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838b588a59c2ea90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407505203657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SUBNET-ItmVSCodeLab1_Backend_DB_1"
            },
            "tags_all": {
              "Name": "SUBNET-ItmVSCodeLab1_Backend_DB_1"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "subnet-0838b588a59c2ea90",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUNNET_ItmVSCodeLab1_Backend_DB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:subnet/subnet-0b3e490d386c195bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.8.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3e490d386c195bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407505203657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SUBNET-ItmVSCodeLab1_Backend_DB_2"
            },
            "tags_all": {
              "Name": "SUBNET-ItmVSCodeLab1_Backend_DB_2"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "subnet-0b3e490d386c195bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUNNET_ItmVSCodeLab_Frontend_Web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:subnet/subnet-079778c088a5c8692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.8.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079778c088a5c8692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407505203657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SUBNET-ItmVSCodeLab1_Frontend_Web_1"
            },
            "tags_all": {
              "Name": "SUBNET-ItmVSCodeLab1_Frontend_Web_1"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "subnet-079778c088a5c8692",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUNNET_ItmVSCodeLab_Frontend_Web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:subnet/subnet-0b10162e40444ee66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.8.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b10162e40444ee66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407505203657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "SUBNET-ItmVSCodeLab1_Frontend_Web_2"
            },
            "tags_all": {
              "Name": "SUBNET-ItmVSCodeLab1_Frontend_Web_2"
            },
            "vpc_id": "vpc-02b4dbcea53370c8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "407505203657",
            "id": "subnet-0b10162e40444ee66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.VPCItmVSCodeLab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCItmVSCodeLab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407505203657:vpc/vpc-02b4dbcea53370c8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.8.0/25",
            "default_network_acl_id": "acl-09c0a1b3ec6e4a41a",
            "default_route_table_id": "rtb-0d64564f058aa3593",
            "default_security_group_id": "sg-01664460a7a2eb42d",
            "dhcp_options_id": "dopt-03716e222ff36eae1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b4dbcea53370c8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d64564f058aa3593",
            "owner_id": "407505203657",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-ItmVSCodeLab1"
            },
            "tags_all": {
              "Name": "VPC-ItmVSCodeLab1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}